# titan

./: .gitignore  .lldbinit  CMakeLists.txt  titan.py
core/: CMakeLists.txt
core/inc/: api.hxx  core.hxx  extension.hxx  log.hxx  obj.hxx  result.hxx  typename.hxx
core/inc/format/: vk.hxx  xr.hxx
core/inc/titan/: component.hxx  core.hxx  ecs.hxx  extension.hxx  format.hxx  hash.hxx  log.hxx  model.hxx  obj.hxx  result.hxx  utils.hxx  wrapper.hxx
core/inc/titan/format/: vk.hxx  xr.hxx
core/inc/titan/system/: entity.hxx  graphics.hxx  input.hxx  resource.hxx
core/inc/titan/wrapper/: al.hxx  base.hxx  glfw.hxx  vk.hxx  xr.hxx
core/inc/wrapper/: al.hxx  glfw.hxx  vk.hxx  xr.hxx
core/src/: component.cxx  core.cxx  ecs.cxx  obj.cxx
core/src/core/: al.cxx  callback.cxx  glfw.cxx  static.cxx  vk.cxx  xr.cxx
core/src/core/vk/: buffers.cxx  command_buffers.cxx  command_pool.cxx  descriptor_pool.cxx  descriptor_set_layouts.cxx  descriptor_sets.cxx  device.cxx  fill_buffers.cxx  formats.cxx  framebuffers.cxx  instance.cxx  memory.cxx  messenger.cxx  physical_device.cxx  pipeline.cxx  pipeline_cache.cxx  pipeline_layout.cxx  queue_families.cxx  queues.cxx  record.cxx  render_pass.cxx  swapchain_reference.cxx  synchronization.cxx  vertex_buffer.cxx  window_surface.cxx  window_swapchain_view.cxx
core/src/core/xr/: action_set.cxx  environment_blend_mode.cxx  instance.cxx  messenger.cxx  reference_space.cxx  session.cxx  swapchain_reference.cxx  swapchain_views.cxx  system.cxx  view_configuration_type.cxx  view_configuration_views.cxx
core/src/extension/: vk.cxx  xr.cxx
core/src/system/: entity.cxx  graphics.cxx  input.cxx  resource.cxx
core/src/utils/: vk.cxx  xr.cxx
core/src/wrapper/: al.cxx  glfw.cxx
game/: CMakeLists.txt
game/res/mesh/: cube.json  teapot.json
game/res/pipeline/: default.json
game/res/shader/: frag.glsl  frag.json  vert.glsl  vert.json
game/src/: main.cxx
pkg/: CMakeLists.txt
pkg/inc/: pkg.hxx
pkg/inc/pkg/: mesh.hxx  shader.hxx
pkg/inc/pkg/mesh/: obj.hxx
pkg/src/: main.cxx
pkg/src/lib/mesh/: obj.cxx
